1. Update main header title

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="prose max-w-none prose-h2:text-amber-300 border-b border-b-gray-600 flex sticky top-0 bg-gray-900">
-  <a class="m-4"
+  <a class="m-4 text-gray-100 text-xl font-bold no-underline hover:text-amber-300 capitalize transition-colors"
      href="/"
   >Github repos</a>
 </nav>
